optional waiting time.. no param in libswift.conf

--- a/experiments/libswift/libswift.conf
+++ b/experiments/libswift/libswift.conf
@@ -52,15 +52,8 @@ seeder_packet_loss="0%"
 seeder_rate="1mbit_4k"
 seeder_rate_ul="1mbit_4k"
 
-
-leecher_time="10s"
-
-
-
-
 # size of the file to transfer, this is generated on the fly
 file_size="10M"
-
 
 # process guard settings
 experiment_time=0
@@ -77,4 +70,5 @@ network_ip_range = "192.168.1"
 leecher_id = "111"
 bridge_name = "br0"
 
+# iperf used for testing
 iperf_test="false"
