--- a/experiments/libswift/aggregate.conf
+++ b/experiments/libswift/aggregate.conf
@@ -1,5 +1,7 @@
 
 post_process_cmd = "gumby/experiments/libswift/aggregate_graph.sh"
 
+experiment_name = ""
+
 # extra_r_scripts_to_run = agg_downloadtime.r 
 
