--- a/experiments/libswift/libswift.conf
+++ b/experiments/libswift/libswift.conf
@@ -62,6 +62,8 @@ leecher_time="10s"
 # size of the file to transfer, this is generated on the fly
 file_size="10M"
 
+# packet size. Is the smalles packet transmitted by libswift in bytes (1K default)
+packet_size=1024
 
 # process guard settings
 experiment_time=0
